# aws-bootcamp-cruddur-2023

./: .gitignore  .gitpod.yml  README.md  cmd.sh  docker-compose.yml  otel-collector-config.yaml  otel_collector_config.yaml
aws/cfn/: template.yaml
aws/json/: alarm-config.json  service-backend-flask.json  service-frontend-react-js.json
aws/lambdas/: cruddur-messaging-stream.py  cruddur-post-confirmation.py
aws/policies/: cruddur-message-stream-policy.json  s3-upload-avatar-presigned-url-policy.json  service-assume-role-execution-policy.json  service-execution-policy.json  task-assume-role-execution-policy.json  task-execution-policy.json
aws/s3/: cors.json
aws/task-definitions/: backend-flask.json  (+1 more)
backend-flask/: Dockerfile  Dockerfile.prod  app.py  buildspec.yml  openapi-3.0.yml  requirements.txt
ddb/: build  deploy  package  template.yaml
erb/: backend-flask.env.erb  frontend-react-js.env.erb  sync.env.erb
frontend-react-js/: Dockerfile  package-lock.json  package.json
journal/: week0.md  week1.md  week10.md  week2.md  week3.md  week4.md  week5.md  week6.md  week8.md  week9.md  weekX.md
journal/week1_homework/multistage_build/hello_world/: CMakeLists.txt  hello.c
thumbing-serverless-cdk/: .env  .env.example  package-lock.json  package.json
tmp/: sync-changeset-1690192231.json  sync-changeset-1690192792.json  sync-changeset-1690195121.json  sync-changeset-1690399082.json  sync-changeset-1690407195.json  sync-changeset-1690443636.json  sync-changeset-1690443724.json  sync-changeset-1690444186.json  sync-changeset-1690455373.json
(+99 files in other folders)
